--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,13 @@ dependencies:
   vertical_card_pager: ^1.4.0
   intl: ^0.20.2
   flutter_colorpicker: ^1.0.3
+  flutter_image_compress: ^2.4.0 
+  web: ^1.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   assets:
